WD-34910 - Fix dropdown overflow hidden bug in releases UI

--- a/static/sass/_snapcraft_release.scss
+++ b/static/sass/_snapcraft_release.scss
@@ -400,6 +400,11 @@
     .p-tooltip {
       display: block;
     }
+
+    &.opens-up {
+      top: auto;
+      bottom: 100%;
+    }
   }
 
   .is-grabbing,
